--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "typescript": "^5.8.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
